Kubernetes/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: weightapptracker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weightapptracker
  template:
    metadata:
      labels:
        app: weightapptracker
    spec:
      containers:
        - name: weightapptracker
          image: weightapptracker.azurecr.io/weightapptracker
          ports:
          - containerPort: 80
