Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
    name: weightapptracker2
spec:
    ports:
    - port: 80 
    selector:
        app: weightapptracker2
